apps/base/media-center/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.20.3014-ls326
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: videos
              mountPath: /tv
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: videos
          persistentVolumeClaim:
            claimName: jellyfin-videos
        - name: downloads
          persistentVolumeClaim:
            claimName: qbitt-download
