apps/base/media-center/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8989
      protocol: TCP
  selector:
    app.kubernetes.io/name: sonarr
