apps/base/media-center/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - sonarr.nathan-fouere.com
  rules:
    - backendRefs:
        - name: sonarr
          port: 80
